export const snapshot = {};

snapshot[`relative_url plugin 1`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".page.ts",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".page.js",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.json",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".markdown",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".vto",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
  ],
  src: [
    "/",
    "/about-us",
    "/about-us/contact.md",
    "/about-us/index.md",
    "/about-us/presentation.md",
    "/index.md",
  ],
}
`;

snapshot[`relative_url plugin 2`] = `[]`;

snapshot[`relative_url plugin 3`] = `
[
  {
    content: '<!DOCTYPE html>
<html><head></head><body><p>Contact</p>
<ul>
<li><a href="../..">Index</a></li>
<li><a href="..">About us</a></li>
<li><a href="">Contact</a></li>
<li><a href="../presentation">Presentation</a></li>
</ul>
</body></html>',
    data: {
      basename: "contact",
      children: '<p>Contact</p>
<ul>
<li><a href="/">Index</a></li>
<li><a href="/about-us">About us</a></li>
<li><a href="/about-us/contact">Contact</a></li>
<li><a href="/about-us/presentation">Presentation</a></li>
</ul>
',
      content: "Contact

- [Index](/)
- [About us](/about-us)
- [Contact](/about-us/contact)
- [Presentation](/about-us/presentation)
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/about-us/contact/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/about-us/contact",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html><head></head><body><p>About us</p>
<ul>
<li><a href="..">Index</a></li>
<li><a href="">About us</a></li>
<li><a href="contact">Contact</a></li>
<li><a href="presentation">Presentation</a></li>
</ul>
</body></html>',
    data: {
      basename: "index",
      children: '<p>About us</p>
<ul>
<li><a href="/">Index</a></li>
<li><a href="/about-us">About us</a></li>
<li><a href="/about-us/contact">Contact</a></li>
<li><a href="/about-us/presentation">Presentation</a></li>
</ul>
',
      content: "About us

- [Index](/)
- [About us](/about-us)
- [Contact](/about-us/contact)
- [Presentation](/about-us/presentation)
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/about-us/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/about-us/index",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html><head></head><body><p>Presentation</p>
<ul>
<li><a href="../..">Index</a></li>
<li><a href="..">About us</a></li>
<li><a href="../contact">Contact</a></li>
<li><a href="">Presentation</a></li>
</ul>
</body></html>',
    data: {
      basename: "presentation",
      children: '<p>Presentation</p>
<ul>
<li><a href="/">Index</a></li>
<li><a href="/about-us">About us</a></li>
<li><a href="/about-us/contact">Contact</a></li>
<li><a href="/about-us/presentation">Presentation</a></li>
</ul>
',
      content: "Presentation

- [Index](/)
- [About us](/about-us)
- [Contact](/about-us/contact)
- [Presentation](/about-us/presentation)
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/about-us/presentation/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/about-us/presentation",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html><head></head><body><p>Index</p>
<ul>
<li><a href="">Index</a></li>
<li><a href="about-us">About us</a></li>
<li><a href="./about-us/contact">Contact</a></li>
<li><a href="about-us/presentation">Presentation</a></li>
<li><a href="?ignored=true">Ignored</a></li>
<li><a href="#ignored">Ignored</a></li>
<li><a href="https://ignored.com">Ignored</a></li>
<li><a href="//ignored.com">Ignored</a></li>
</ul>
</body></html>',
    data: {
      basename: "index",
      children: '<p>Index</p>
<ul>
<li><a href="/">Index</a></li>
<li><a href="about-us">About us</a></li>
<li><a href="./about-us/contact">Contact</a></li>
<li><a href="about-us/presentation">Presentation</a></li>
<li><a href="?ignored=true">Ignored</a></li>
<li><a href="#ignored">Ignored</a></li>
<li><a href="https://ignored.com">Ignored</a></li>
<li><a href="//ignored.com">Ignored</a></li>
</ul>
',
      content: "Index

- [Index](/)
- [About us](about-us)
- [Contact](./about-us/contact)
- [Presentation](about-us/presentation)
- [Ignored](?ignored=true)
- [Ignored](#ignored)
- [Ignored](https://ignored.com)
- [Ignored](//ignored.com)
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/index",
      remote: undefined,
    },
  },
]
`;

snapshot[`relative_url plugin when pretty urls disabled 1`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".page.ts",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".page.js",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.json",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".markdown",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".vto",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
  ],
  src: [
    "/",
    "/about-us",
    "/about-us/contact.md",
    "/about-us/index.md",
    "/about-us/presentation.md",
    "/index.md",
  ],
}
`;

snapshot[`relative_url plugin when pretty urls disabled 2`] = `[]`;

snapshot[`relative_url plugin when pretty urls disabled 3`] = `
[
  {
    content: '<!DOCTYPE html>
<html><head></head><body><p>Contact</p>
<ul>
<li><a href="..">Index</a></li>
<li><a href="">About us</a></li>
<li><a href="contact">Contact</a></li>
<li><a href="presentation">Presentation</a></li>
</ul>
</body></html>',
    data: {
      basename: "contact",
      children: '<p>Contact</p>
<ul>
<li><a href="/">Index</a></li>
<li><a href="/about-us">About us</a></li>
<li><a href="/about-us/contact">Contact</a></li>
<li><a href="/about-us/presentation">Presentation</a></li>
</ul>
',
      content: "Contact

- [Index](/)
- [About us](/about-us)
- [Contact](/about-us/contact)
- [Presentation](/about-us/presentation)
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/about-us/contact.html",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/about-us/contact",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html><head></head><body><p>About us</p>
<ul>
<li><a href="..">Index</a></li>
<li><a href="">About us</a></li>
<li><a href="contact">Contact</a></li>
<li><a href="presentation">Presentation</a></li>
</ul>
</body></html>',
    data: {
      basename: "index",
      children: '<p>About us</p>
<ul>
<li><a href="/">Index</a></li>
<li><a href="/about-us">About us</a></li>
<li><a href="/about-us/contact">Contact</a></li>
<li><a href="/about-us/presentation">Presentation</a></li>
</ul>
',
      content: "About us

- [Index](/)
- [About us](/about-us)
- [Contact](/about-us/contact)
- [Presentation](/about-us/presentation)
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/about-us/index.html",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/about-us/index",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html><head></head><body><p>Presentation</p>
<ul>
<li><a href="..">Index</a></li>
<li><a href="">About us</a></li>
<li><a href="contact">Contact</a></li>
<li><a href="presentation">Presentation</a></li>
</ul>
</body></html>',
    data: {
      basename: "presentation",
      children: '<p>Presentation</p>
<ul>
<li><a href="/">Index</a></li>
<li><a href="/about-us">About us</a></li>
<li><a href="/about-us/contact">Contact</a></li>
<li><a href="/about-us/presentation">Presentation</a></li>
</ul>
',
      content: "Presentation

- [Index](/)
- [About us](/about-us)
- [Contact](/about-us/contact)
- [Presentation](/about-us/presentation)
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/about-us/presentation.html",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/about-us/presentation",
      remote: undefined,
    },
  },
  {
    content: '<!DOCTYPE html>
<html><head></head><body><p>Index</p>
<ul>
<li><a href="">Index</a></li>
<li><a href="about-us">About us</a></li>
<li><a href="./about-us/contact">Contact</a></li>
<li><a href="about-us/presentation">Presentation</a></li>
<li><a href="?ignored=true">Ignored</a></li>
<li><a href="#ignored">Ignored</a></li>
<li><a href="https://ignored.com">Ignored</a></li>
<li><a href="//ignored.com">Ignored</a></li>
</ul>
</body></html>',
    data: {
      basename: "index",
      children: '<p>Index</p>
<ul>
<li><a href="/">Index</a></li>
<li><a href="about-us">About us</a></li>
<li><a href="./about-us/contact">Contact</a></li>
<li><a href="about-us/presentation">Presentation</a></li>
<li><a href="?ignored=true">Ignored</a></li>
<li><a href="#ignored">Ignored</a></li>
<li><a href="https://ignored.com">Ignored</a></li>
<li><a href="//ignored.com">Ignored</a></li>
</ul>
',
      content: "Index

- [Index](/)
- [About us](about-us)
- [Contact](./about-us/contact)
- [Presentation](about-us/presentation)
- [Ignored](?ignored=true)
- [Ignored](#ignored)
- [Ignored](https://ignored.com)
- [Ignored](//ignored.com)
",
      date: [],
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/index.html",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/index",
      remote: undefined,
    },
  },
]
`;
